module-08/complete/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-grpc
  name: test-grpc
  namespace: test-grpc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-grpc
  template:
    metadata:
      labels:
        app: test-grpc
    spec:
      containers:
        - name: test-grpc
          image: ghcr.io/cshep4/grpc-course/hello-server:v1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
              name: grpc
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: github-packages-secret
