module-08/complete/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-grpc
  name: test-grpc
  namespace: test-grpc
spec:
  ports:
    - port: 50051
      name: grpc
      targetPort: 50051
  selector:
    app: test-grpc
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-grpc-with-tls
  name: test-grpc-with-tls
  namespace: test-grpc
spec:
  ports:
    - port: 50051
      name: grpc
      targetPort: 50051
  selector:
    app: test-grpc-with-tls
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-grpc-with-tls
  name: test-grpc-lb
  namespace: test-grpc
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
spec:
  type: LoadBalancer
  ports:
    - port: 50051
      name: grpc
      targetPort: 50051
      protocol: TCP
  selector:
    app: test-grpc-with-tls
