module-08/complete/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: test-grpc
  name: test-grpc
  namespace: test-grpc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grpcgo.io
        - "*.grpcgo.io"
      secretName: test-grpc-cert-secret
  rules:
  - host: "ing.grpcgo.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-grpc
            port:
              number: 50051
